--- a/readme
+++ b/readme
@@ -1,7 +1,6 @@
-Background ¶
-In recent times, there has been a widespread acknowledgment of the perception that the food industry is responsible for the production of a significant amount of highly processed foods. While this understanding prevails, a closer examination through a comprehensive dataset provides valuable insights into the extent of food processing. The dataset in question encompasses a staggering 50,000 products, offering a detailed inventory of their ingredients and corresponding values for sugar, protein, and fat content.
-This dataset serves as a critical tool in unraveling the intricacies of the food industry's contribution to the prevalence of processed foods. By meticulously cataloging ingredients and nutritional information, it unveils the composition of a vast array of products, shedding light on the intricate balance between sugar, protein, and fat within them. This level of granularity allows researchers, policymakers, and the public to make informed decisions about dietary choices and fosters a deeper understanding of the impact of processed foods on overall health.
-Armed with this dataset, stakeholders can identify patterns, trends, and outliers within the realm of processed foods. This information becomes particularly pertinent in discussions surrounding public health, nutritional education, and regulatory measures aimed at promoting a healthier food landscape. As society grapples with concerns related to diet-related diseases and obesity, the insights derived from this dataset contribute significantly to the ongoing discourse on the role of the food industry in shaping our collective nutritional habits.
-In essence, this dataset serves as a window into the world of processed foods, offering transparency and data-driven perspectives that go beyond general beliefs. It empowers individuals and institutions to engage in informed conversations about the nature of our food supply, fostering a more nuanced understanding of the intricate relationship between the food industry and the products that populate our shelves.
+## Background ¶
+The perception that the food industry is a major producer of highly processed foods has gained widespread acceptance. A detailed analysis of a comprehensive dataset containing 50,000 products reveals valuable insights into the extent of food processing. This dataset, cataloging ingredients and nutritional information, is a crucial tool for understanding the complex role of the food industry in the prevalence of processed foods. It enables informed decision-making about dietary habits and contributes to a deeper understanding of the impact of processed foods on health. Stakeholders can use this dataset to identify patterns and trends in processed foods, particularly in discussions about public health, nutrition education, and regulatory measures. In addressing concerns about diet-related diseases and obesity, the insights derived from this dataset play a significant role in ongoing discussions about the food industry's influence on our collective dietary habits. In essence, this dataset serves as a transparent, data-driven window into the world of processed foods, fostering informed conversations about our food supply and the intricate relationship between the food industry and the products available on our shelves.
+
+
 
 @misc{GroceryDB, title={GroceryDB: Prevalence of Processed Food in Grocery Stores}, author={Babak Ravandi and Peter Mehler and Albert-László Barabási and Giulia Menichetti}, year={2022}, eprint={medRxiv:2022.04.23.22274217}, url = {https://www.medrxiv.org/content/10.1101/2022.04.23.22274217} }
